# AlienDudes

./: CMakeLists.txt  conanfile.txt  gl_helpers.hpp  main.cpp
data_types/: buffer.hpp  rgb.cpp  rgb.hpp  window.hpp
